#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(pimc++, 0.1, esler@uiuc.edu)
AC_CONFIG_SRCDIR([Main.cc])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
PKG_CHECK_MODULES(BLITZ, blitz, blitz_ok=yes, blitz_ok=no)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_STRTOD
AC_CHECK_FUNCS([floor gethostname pow sqrt strtol])

AC_CONFIG_FILES([Actions/Makefile
                 Common/Atom/Makefile
                 Common/DFT/Makefile
                 Common/Distributed/Makefile
                 Common/Ewald/Makefile
                 Common/Fitting/Makefile
                 Common/IO/Makefile
                 Common/Integration/Makefile
                 Common/MPI/Makefile
                 Common/Makefile
                 Common/MatrixOps/Makefile
                 Common/Optimize/Makefile
                 Common/PH/Makefile
                 Common/PairAction/Makefile
                 Common/Random/Makefile
                 Common/SpecialFunctions/Makefile
                 Common/Splines/Makefile
                 Common/Splines/fortran/Makefile
                 Makefile
                 Moves/Makefile
                 Observables/Makefile
                 Tests/Makefile])
AC_OUTPUT
