  noinst_LTLIBRARIES = libactions.la

libactions_la_CXXFLAGS = $(COMMON_CFLAGS) $(QMC_DEF) $(BOOST_LIB) $(LIBXML_LIB) $(MPI_DEF)
libactions_la_SOURCES =            \
    ActionBase.cc                  \
    ActionBase.h                   \
    ActionsClass.cc                \
    ../det_calc_uekt.h             \
    ../det_calc_uekt.c             \
    ActionsClass.h                 \
    DavidLongRangeClass.cc         \
    DavidLongRangeClass.h          \
    DavidLongRangeClassYk.cc         \
    DavidLongRangeClassYk.h         \
    FixedPhaseActionClass.cc       \
    FixedPhaseActionClass.h        \
    FreeNodalActionClass.cc        \
    FreeNodalActionClass.h         \
    GroundStateNodalActionClass.cc \
    GroundStateNodalActionClass.h  \
    Hermele.h                      \
    DiagonalActionClass.h          \
    DiagonalActionClass.cc          \
    DualHermele.h                  \
    EAMClass.cc                    \
    EAMClass.h                     \
    Hermele.cc                     \
    DualHermele.cc                 \
    Josephson.h                    \
    Josephson.cc                   \
    KineticClass.cc                \
    KineticClass.h                 \
    KineticRotorClass.cc           \
    KineticRotorClass.h            \
    KineticSphereClass.cc          \
    KineticSphereClass.h           \
    KineticVibrationClass.cc       \
    KineticVibrationClass.h        \
    LongRangeClass.cc              \
    LongRangeClass.h               \
    LongRangeCoulombClass.cc       \
    LongRangeCoulombClass.h        \
    LongRangePotClass.cc           \
    LongRangePotClass.h            \
    LongRangeRPAClass.cc           \
    LongRangeRPAClass.h            \
    MoleculeInteractionsClass.cc   \
    MoleculeInteractionsClass.h    \
    Mu.h                           \
    Mu.cc                          \
    NodalActionClass.cc            \
    NodalActionClass.h             \
    NonlocalClass.cc               \
    NonlocalClass.h                \
    OpenLoopImportance.cc          \
    OpenLoopImportance.h           \
    PairFixedPhase.h               \
    PairFixedPhase.cc              \
    popen2.h                       \
    popen2.cc                      \
		pwscfAction.cc                 \
		pwscfAction.h                  \
    QBoxAction.cc                  \
    QBoxAction.h                   \
    QMCSamplingClass.h             \
    QMCSamplingClass.cc            \
    ShortRangeApproximateClass.cc  \
    ShortRangeApproximateClass.h   \
    ShortRangeClass.cc             \
    ShortRangeClass.h              \
    ShortRangeOnClass.h            \
    ShortRangeOnClass.cc           \
    ShortRangeOn_diagonal_Class.cc           \
    ShortRangeOn_diagonal_Class.h           \
    ShortRangeOn_diagonal_displace_Class.cc           \
    ShortRangeOn_diagonal_displace_Class.h           \
    ShortRangePotClass.cc          \
    ShortRangePotClass.h           \
    ShortRangePrimitive.h          \
    ShortRangePrimitive.cc         \
    StructureReject.h              \
    StructureReject.cc             \
    ST2WaterClass.cc               \
    ST2WaterClass.h                \
    StructureReject.cc             \
    Tether.h                       \
    Tether.cc                      \
    TIP5PWaterClass.cc             \
    TIP5PWaterClass.h              \
    VariationalPI.h                \
    VariationalPI.cc               \
    TruncatedInverse.h             \
    TruncatedInverse.cc            \
    VariationalPI.h                \
    VariationalPI.cc               

EXTRA_DIST = FixedPhase.tex
