noinst_LTLIBRARIES = libmoves.la

libmoves_la_CXXFLAGS = $(COMMON_CFLAGS)
libmoves_la_SOURCES  =           \
    BisectionBlock.cc            \
    BisectionBlock.h             \
    BisectionSphereBlock.cc      \
    BisectionSphereBlock.h       \
    BisectionStage.cc            \
    BisectionStage.h             \
    BisectionJosephsonStage.cc   \
    BisectionJosephsonStage.h    \
    BisectionSphereStage.cc      \
    BisectionSphereStage.h       \
    CenterDropletMove.h          \
    CenterDropletMove.cc         \
    CenterofMassMove.h           \
    CenterofMassMove.cc          \
    CorrelatedBisectionBlock.cc  \
    CorrelatedBisectionBlock.h   \
    CoupledPermuteStage.cc       \
    CoupledPermuteStage.h        \
    CouplingMove.cc              \
    CouplingMove.h               \
    CouplingStage.h              \
    CouplingStage.cc             \
    DisplaceMove.cc              \
    DisplaceMove.h               \
    EmptyStage.h                 \
    EmptyStage.cc                \
    EndStage.cc                  \
    EndStage.h                   \
    GlobalJosephsonMove.h        \
    GlobalJosephsonMove.cc       \
    HermeleFourierMove.h         \
    HermeleFourierMove.cc        \
    LangevinMove.cc              \
    LangevinMove.h               \
    LeviFlightStage.h            \
    LeviFlightStage.cc           \
    MetaMoves.cc                 \
    MetaMoves.h                  \
    MoveBase.cc                  \
    MoveBase.h                   \
    MoveClass.h                  \
    MultiStage.cc                \
    MultiStage.h                 \
    NoPermuteClass.h             \
    NoPermuteClass.cc            \
    OpenStage.h                  \
    OpenStage.cc                 \
    OpenEndMove.cc               \
    OpenEndMove.h                \
    OpenStage.h                  \
    OpenStage.cc                 \
    PermuteStage.cc              \
    PermuteTableOnClass.cc       \
    PermuteTableOnClass.h        \
    PermuteTableClass.cc         \
    PermuteTableClass.h          \
    RandomPermClass.cc           \
    RandomPermClass.h            \
    RandomPermMove.h             \
    RefSliceMove.cc              \
    RefSliceMove.h               \
    StructureRejectStage.cc      \
    StructureRejectStage.h       \
    StageClass.h                 \
    StageClass.cc                \
    TablePermuteStage.cc         \
    TablePermuteStage.h          \
    ClusterMove.cc               \
    ClusterMove.h                \
    WaterMove.cc                 \
    WaterMove.h                  \
    WaterMoveRing.cc             \
    WaterMoveRing.h              
#     VariationalDisplaceMove.h    \
#     VariationalDisplaceMove.cc   \
#     WormClose.h                  \
#     WormClose.cc                 \
#     WormStage.h                  \
#     WormStage.cc                 \
#     WormGrow.h		         \
#     WormGrow.cc                  \
#     WormRemove.cc                \
#     WormRemove.h                 \
#     WormPermuteStage.h           \
#     WormPermuteStage.cc     

