check_PROGRAMS = TestSpaceWarp

TestSpaceWarp_SOURCES = TestSpaceWarp.cc

LDADD = $(COMMON_LIBS) libmoves.la

AM_CXXFLAGS = $(COMMON_FLAGS)

noinst_LTLIBRARIES = libmoves.la

libmoves_la_CXXFLAGS = $(COMMON_CFLAGS) $(QMC_DEF)
libmoves_la_SOURCES  =           \
    AVBMove.cc                   \
    AVBMove.h                    \
    BisectionBlock.cc            \
    BisectionBlock.h             \
    BisectionSphereBlock.cc      \
    BisectionSphereBlock.h       \
    BisectionStage.cc            \
    BisectionStage.h             \
    BisectionJosephsonStage.cc   \
    BisectionJosephsonStage.h    \
    BisectionSphereStage.cc      \
    BisectionSphereStage.h       \
    CenterDropletMove.h          \
    CenterDropletMove.cc         \
    CenterofMassMove.h           \
    CenterofMassMove.cc          \
    CorrelatedBisectionBlock.cc  \
    CorrelatedBisectionBlock.h   \
    CoupledPermuteStage.cc       \
    CoupledPermuteStage.h        \
    CouplingMove.cc              \
    CouplingMove.h               \
    CouplingStage.h              \
    CouplingStage.cc             \
    DisplaceMove.cc              \
    DisplaceMove.h               \
    EmptyStage.h                 \
    EmptyStage.cc                \
    EndStage.cc                  \
    EndStage.h                   \
    IonDisplaceMove.h            \
    IonDisplaceMove.cc           \
    IonMoveStage.h               \
    IonMoveStage.cc              \
    IonMoveManager.h             \
    IonMoveManager.cc            \
    GlobalJosephsonMove.h        \
    GlobalJosephsonMove.cc       \
    HermeleFourierMove.h         \
    HermeleFourierMove.cc        \
    LangevinMove.cc              \
    LangevinMove.h               \
    LeviFlightStage.h            \
    LeviFlightStage.cc           \
    MetaMoves.cc                 \
    MetaMoves.h                  \
    MoleculeMoveBase.cc          \
    MoleculeMoveBase.h           \
    MoveBase.cc                  \
    MoveBase.h                   \
    MoveClass.h                  \
    MoveUtils.cc                 \
    MoveUtils.h                  \
    MultiStage.cc                \
    MultiStage.h                 \
    NoPermuteClass.cc            \
    OpenStage.h                  \
    OpenStage.cc                 \
    OpenEndMove.cc               \
    OpenEndMove.h                \
    OpenStage.h                  \
    OpenStage.cc                 \
    PermuteStage.cc              \
    PermuteTableOnClass.cc       \
    PermuteTableOnClass.h        \
    PermuteTableClass.cc         \
    PermuteTableClass.h          \
    RandomPermClass.cc           \
    RandomPermClass.h            \
    RandomPermMove.h             \
    RefSliceMove.cc              \
    RefSliceMove.h               \
    SpaceWarp.cc                 \
    SpaceWarp.h                  \
    StructureRejectStage.cc      \
    StructureRejectStage.h       \
    StageClass.h                 \
    StageClass.cc                \
    TablePermuteStage.cc         \
    TablePermuteStage.h          \
    ClusterMove.cc               \
    ClusterMove.h                \
    WaterMoveManager.cc          \
    WaterMoveManager.h           \
    VariationalDisplaceMove.h    \
    VariationalDisplaceMove.cc   \
    WaterMove.cc                 \
    WaterMove.h                  \
    WaterMoveRing.cc             \
    WaterMoveRing.h              \
    QMCTest.cc                   \
    QMCTest.h                    \
    WormPermuteStage.h           \
    WormPermuteStage.cc   
