noinst_LTLIBRARIES = libobservables.la

libobservables_la_CXXFLAGS = $(COMMON_CFLAGS)
libobservables_la_SOURCES  =     \
    Angular.h                    \
    Angular.cc                   \
    AngularMomCor.h              \
    AngularMomCor.cc             \
    AutoCorr.cc                  \
    AutoCorr.h                   \
    Conductivity.h               \
    Conductivity.cc              \
    Coupling.cc                  \
    Coupling.h                   \
    DistanceToHead.cc            \
    DistanceToHead.h             \
    Forces.cc                    \
    Forces.h                     \
    JosephsonPathDump.h          \
    JosephsonPathDump.cc         \
    ObservableBase.cc            \
    ObservableBase.h             \
    ObservableClass.h            \
    ObservableVar.h              \
    ObservableVar.cc             \
    ObservableCorrelation.cc     \
    ObservableCorrelation.h      \
    ObservableEnergy.cc          \
    ObservableEnergy.h           \
    ObservableModifiedEnergy.cc  \
    ObservableModifiedEnergy.h   \
    OpenOrientation.h            \
    OpenOrientation.cc           \
    ParticleAverageLoc.h         \
    ParticleAverageLoc.cc        \
    PathDump.cc                  \
    PathDump.h                   \
    PermutationCount.h           \
    PermutationCount.cc          \
    Pressure.h                   \
    Pressure.cc                  \
    PhiK.h                       \
    Phik.cc                      \
    PlaneDensity.h               \
    PlaneDensity.cc              \
    SuperfluidFraction.h         \
    SuperfluidFraction.cc        \
    SuperfluiDrop.h              \
    SuperfluiDrop.cc             \
    StructureFactor.cc           \
    StructureFactor.h            \
    Time.cc                      \
    Time.h                       \
    VacancyLocation.h            \
    VacancyLocation.cc           \
    VariationalPIEnergy.h        \
    VariationalPIEnergy.cc       \
    Weight.cc                    \
    Weight.h                     \
    WindingNumber.cc             \
    WindingNumber.h
